# gtsam_personal

./: .gitignore  CMakeLists.txt  DEVELOP.md  GTSAM-Concepts.md  INSTALL.md  README.md  Using-GTSAM-EXPORT.md  myst.yml
gtsam/base/: CMakeLists.txt  ConcurrentMap.h  FastList.h  FastMap.h  FastSet.h  GenericValue.h  Group.h  Lie.h  Manifold.h  Matrix.cpp  Matrix.h  MatrixSerialization.h  ProductLieGroup.h  SymmetricBlockMatrix.h  Testable.h  TestableAssertions.h  Value.h  Vector.cpp  Vector.h  VectorSerialization.h  VectorSpace.h  VerticalBlockMatrix.h  base.i  cholesky.cpp  concepts.h  serialization.h  serializationTestHelpers.h  std_optional_serialization.h  timing.cpp  timing.h  utilities.h
gtsam/base/tests/: testMatrix.cpp  testNumericalDerivative.cpp  testStdOptionalSerialization.cpp  testVector.cpp
gtsam/discrete/: AlgebraicDecisionTree.h  Assignment.h  CMakeLists.txt  DecisionTree-inl.h  DecisionTree.h  DecisionTreeFactor.cpp  DecisionTreeFactor.h  DiscreteBayesNet.cpp  DiscreteBayesNet.h  DiscreteConditional.cpp  DiscreteConditional.h  DiscreteDistribution.h  DiscreteFactor.cpp  DiscreteFactor.h  DiscreteFactorGraph.cpp  DiscreteFactorGraph.h  DiscreteJunctionTree.cpp  DiscreteJunctionTree.h  DiscreteKey.h  DiscreteLookupDAG.cpp  DiscreteLookupDAG.h  DiscreteMarginals.cpp  DiscreteMarginals.h  DiscreteSearch.cpp  DiscreteSearch.h  DiscreteTableConditional.cpp  DiscreteTableConditional.h  DiscreteValues.cpp  DiscreteValues.h  Ring.h  TableDistribution.cpp  TableDistribution.h  TableFactor.cpp  TableFactor.h  discrete.i
gtsam/discrete/tests/: AsiaExample.h  testAlgebraicDecisionTree.cpp  testDecisionTree.cpp  testDecisionTreeFactor.cpp  testDiscreteBayesNet.cpp  testDiscreteBayesTree.cpp  testDiscreteConditional.cpp  testDiscreteFactor.cpp  testDiscreteFactorGraph.cpp  testDiscreteSearch.cpp  testDiscreteValues.cpp  testSerializationDiscrete.cpp  testTableFactor.cpp
gtsam/nonlinear/: BatchFixedLagSmoother.h  BayesTreeMarginalizationHelper.h  CMakeLists.txt  CustomFactor.h  DoglegOptimizerImpl.cpp  DoglegOptimizerImpl.h  Expression-inl.h  ExpressionFactor.h  ExtendedKalmanFilter-inl.h  FunctorizedFactor.h  ISAM2-impl.cpp  ISAM2-impl.h  ISAM2.cpp  ISAM2.h  ISAM2Clique.cpp  ISAM2Clique.h  IncrementalFixedLagSmoother.cpp  IncrementalFixedLagSmoother.h  LIEKF.h  LevenbergMarquardtOptimizer.cpp  LinearContainerFactor.h  NonlinearConjugateGradientOptimizer.h  NonlinearEquality.h  NonlinearFactor.cpp  NonlinearFactor.h  NonlinearFactorGraph.h  PriorFactor.h  Values-inl.h  Values.cpp  Values.h  nonlinear.i  nonlinear.md  values.i
gtsam/nonlinear/doc/: BatchFixedLagSmoother.ipynb  CustomFactor.ipynb  DoglegOptimizer.ipynb  ExpressionFactor.ipynb  ExpressionFactorGraph.ipynb  ExtendedKalmanFilter.ipynb  FixedLagSmoother.ipynb  GaussNewtonOptimizer.ipynb  GncOptimizer.ipynb  ISAM2.ipynb  IncrementalFixedLagSmoother.ipynb  LevenbergMarquardtOptimizer.ipynb  LinearContainerFactor.ipynb  NonlinearConjugateGradientOptimizer.ipynb  NonlinearEquality.ipynb  NonlinearFactor.ipynb  NonlinearFactorGraph.ipynb  NonlinearISAM.ipynb  NonlinearOptimizer.ipynb  PriorFactor.ipynb  WhiteNoiseFactor.ipynb
gtsam/nonlinear/internal/: ChiSquaredInverse.h  ExpressionNode.h
gtsam/nonlinear/tests/: testExpression.cpp  testIncrementalFixedLagSmoother.cpp  testSerializationNonlinear.cpp  testValues.cpp
gtsam/slam/: AntiFactor.h  BetweenFactor.h  BoundingConstraint.h  CMakeLists.txt  EssentialMatrixConstraint.h  EssentialMatrixFactor.h  FrobeniusFactor.h  GeneralSFMFactor.h  KarcherMeanFactor.h  PlanarProjectionFactor.h  PlanarSFMFactor.h  PoseRotationPrior.h  PoseTranslationPrior.h  ProjectionFactor.h  ReferenceFrameFactor.h  SmartFactorBase.h  SmartFactorParams.h  SmartProjectionFactor.h  SmartProjectionPoseFactor.h  SmartProjectionRigFactor.h  StereoFactor.h  TriangulationFactor.h  dataset.cpp  expressions.h  lago.cpp  slam.i  slam.md
gtsam/slam/doc/: BetweenFactor.ipynb  SmartFactors.md  (+22 more)
gtsam_unstable/discrete/: AllDiff.cpp  AllDiff.h  BinaryAllDiff.h  CMakeLists.txt  Constraint.h  Domain.cpp  Domain.h  Scheduler.cpp  SingleValue.cpp  SingleValue.h
gtsam_unstable/dynamics/: CMakeLists.txt  DynamicsPriors.h  FullIMUFactor.h  IMUFactor.h  PoseRTV.cpp  PoseRTV.h  VelocityConstraint.h  VelocityConstraint3.h
gtsam_unstable/geometry/: BearingS2.cpp  BearingS2.h  CMakeLists.txt  InvDepthCamera3.h  Pose3Upright.cpp  Pose3Upright.h
gtsam_unstable/nonlinear/: BayesTreeMarginalizationHelper.h  CMakeLists.txt  ConcurrentBatchFilter.cpp  ConcurrentCertifiableBatchSmoother.cpp  ConcurrentCertifiableBatchSmoother.h  FixedLagSmoother.h  IncrementalFixedLagSmoother.cpp  IncrementalFixedLagSmoother.h  LinearizedFactor.cpp  LinearizedFactor.h
gtsam_unstable/slam/: BetweenFactorEM.h  BiasedGPSFactor.h  CMakeLists.txt  EquivInertialNavFactor_GlobalVel.h  EquivInertialNavFactor_GlobalVel_NoBias.h  GaussMarkov1stOrderFactor.h  InertialNavFactor_GlobalVelocity.h  InvDepthFactor3.h  InvDepthFactorVariant1.h  InvDepthFactorVariant2.h  InvDepthFactorVariant3.h  Mechanization_bRn2.h  MultiProjectionFactor.h  PartialPriorFactor.h  PoseBetweenFactor.h  PosePriorFactor.h  PoseToPointFactor.h  ProjectionFactorPPP.h  ProjectionFactorPPPC.h  ProjectionFactorRollingShutter.h  RelativeElevationFactor.h  SmartProjectionPoseFactorRollingShutter.h  SmartStereoProjectionFactor.h  SmartStereoProjectionFactorPP.cpp  SmartStereoProjectionFactorPP.h  SmartStereoProjectionPoseFactor.cpp  SmartStereoProjectionPoseFactor.h  TOAFactor.h  TransformBtwRobotsUnaryFactor.h  TransformBtwRobotsUnaryFactorEM.h
(+539 files in other folders)
